# agent-studio

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: agents.py  audits.py  auth.py  deps.py  knowledge.py  llms.py  monitor.py  openai_compatible.py  quality.py  router.py  runs.py  sessions.py  skills.py  test_cases.py  tools.py  uploads.py  workspace.py
backend/app/core/: models.py  schemas.py
backend/app/db/: migrations.py  session.py
backend/app/infrastructure/: audit_middleware.py
backend/app/services/: agent_execution_service.py  agent_lifecycle_service.py  agent_preflight_service.py  agent_slug_service.py  audit_service.py  conversation_lifecycle_service.py  egress_policy.py  execution_gateway.py  knowledge_chunk_service.py  knowledge_retrieval_audit_service.py  knowledge_retrieval_service.py  llm_governance_service.py  llm_invocation_log_service.py  llm_observability_service.py  llm_provider_policy.py  llm_runtime_contract.py  mappers.py  mcp_importer.py  metadata_security.py  openai_compatible_service.py  openapi_importer.py  regression_coverage_service.py  regression_quality_service.py  run_event_service.py  run_governance_service.py  run_read_service.py  run_retention_service.py  run_trace_service.py  runtime_capabilities.py  runtime_governance_gate.py  runtime_manifest_hash.py  runtime_manifest_service.py  runtime_plan_service.py  runtime_snapshot_service.py  runtime_state_service.py  (+14 more)
backend/migrations/: README  env.py
(+112 files in other folders)
